--- a/src/app/modules/orders/order-card/order-card.component.html
+++ b/src/app/modules/orders/order-card/order-card.component.html
@@ -136,6 +136,14 @@
           </mat-form-field>
           ילדים
         </h4>
+        <section class="options">
+          <p><mat-checkbox formControlName="highFloor">קומה גבוהה</mat-checkbox></p>
+          <p><mat-checkbox formControlName="porch">מרפסת</mat-checkbox></p>
+        </section>
+        <section class="options">
+          <p><mat-checkbox formControlName="separteBeds">חדרים מחוברים</mat-checkbox></p>
+          <p><mat-checkbox formControlName="multipleRooms">מיטות מופרדות</mat-checkbox></p>
+        </section>
         <section dir="rtl">
           <label>סטטוס הזמנה:</label>
           <mat-radio-group formControlName="status">
@@ -147,14 +155,15 @@
         </section>
       </div>
 
-        <section dir="rtl" style="width: 100%;">
-          <div class="options-container">
-            <mat-checkbox formControlName="separteBeds">חדרים מחוברים</mat-checkbox>
+        <!-- <section dir="rtl" style="width: 100%;"> -->
+          <!-- <div class="options-container"> -->
+         
+            <!-- <mat-checkbox formControlName="separteBeds">חדרים מחוברים</mat-checkbox>
             <mat-checkbox formControlName="multipleRooms">מיטות מופרדות</mat-checkbox>
             <mat-checkbox formControlName="porch">מרפסת</mat-checkbox>
-            <mat-checkbox formControlName="highFloor">קומה גבוהה</mat-checkbox>
-          </div>
-        </section>       
+            <mat-checkbox formControlName="highFloor">קומה גבוהה</mat-checkbox> -->
+          <!-- </div> -->
+        <!-- </section>        -->
 <br>
       <!-- <table>
     <br>
