change to Dolar Icon

--- a/src/app/modules/orders/order-card/order-card.component.html
+++ b/src/app/modules/orders/order-card/order-card.component.html
@@ -102,13 +102,13 @@
             <mat-form-field appearance="fill" floatLabel="always" dir="ltr" class="price">
               <mat-label>מחיר מלא</mat-label>
               <input matInput type="number" placeholder="0" formControlName="totalPrice" min="0">
-              <span matPrefix>₪&nbsp;</span>
+              <span matPrefix>$&nbsp;</span>
               <span matSuffix>.00</span>
             </mat-form-field>
             <mat-form-field appearance="fill" floatLabel="always" dir="ltr" class="price">
               <mat-label>מחיר עלות</mat-label>
               <input matInput type="number" placeholder="0" formControlName="costPrice" min="0">
-              <span matPrefix>₪&nbsp;</span>
+              <span matPrefix>$&nbsp;</span>
               <span matSuffix>.00</span>
             </mat-form-field>
             <!-- </td>
