add fulcalendar pulgins

--- a/src/app/modules/Calendar/calendar/calendar.component.html
+++ b/src/app/modules/Calendar/calendar/calendar.component.html
@@ -1,8 +1,14 @@
 <!-- <p>calendar works!</p> -->
 <!-- <button (click)="toggleWeekends()">toggle weekends</button> -->
-<full-calendar #calendar [options]="calendarOptions">
+<!-- <full-calendar #calendar [options]="calendarOptions"> -->
     <!-- <button title="Week">week</button> -->
-</full-calendar>
+<!-- </full-calendar> -->
+
+<div class="content-section implementation">
+    <div class="card">
+        <full-calendar  #calendar [options]="calendarOptions"></full-calendar>
+    </div>
+</div>
 <br>
 <br>
 <div  class="profit">
