try to convert date in order card

--- a/src/app/modules/orders/order-card/order-card.component.html
+++ b/src/app/modules/orders/order-card/order-card.component.html
@@ -122,7 +122,7 @@
       <div class="container">
         <mat-form-field  formControlName="typeOfRoom" appearance="fill" class="typeOfRoom">
         <mat-label>סוג חדר</mat-label>
-        <input matInput>
+        <input matInput formControlName="typeOfRoom">
       </mat-form-field>
         <h4>
           <mat-form-field appearance="fill" class="num-of-people">
