--- a/src/app/modules/orders/order-card/order-card.component.html
+++ b/src/app/modules/orders/order-card/order-card.component.html
@@ -48,7 +48,7 @@
       <div class="container">
       <mat-form-field appearance="fill" class="dates">
         <mat-label>תאריכים</mat-label>
-        <mat-date-range-input [rangePicker]="rangePicker" [min]="minDate">
+        <mat-date-range-input [rangePicker]="rangePicker" >
           <input matStartDate formControlName="checkInDate" placeholder="תאריך הגעה">
           <input matEndDate formControlName="checkOutDate" placeholder="תאריך עזיבה">
         </mat-date-range-input>
